--- a/HuaShanApp/utils/src/main/res/values/attrs.xml
+++ b/HuaShanApp/utils/src/main/res/values/attrs.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="indicator">
-        <attr name="selected_color" format="color" />
-        <attr name="unselected_color" format="color" />
-        <attr name="distance_from_two_indicator" format="dimension" />
-        <attr name="radius" format="dimension" />
-    </declare-styleable>
+    <!--<declare-styleable name="indicator">-->
+        <!--<attr name="selected_color" format="color" />-->
+        <!--<attr name="unselected_color" format="color" />-->
+        <!--<attr name="distance_from_two_indicator" format="dimension" />-->
+        <!--<attr name="radius" format="dimension" />-->
+    <!--</declare-styleable>-->
 
     <attr name="indicatorDefStyleAttr" format="reference"/>
 
@@ -21,5 +21,11 @@
         <attr name="fletPaddingRight" format="reference|dimension" />
         <attr name="fletPaddingBottom" format="reference|dimension" />
         <attr name="fletBackground" format="reference|color" />
+    </declare-styleable>
+
+
+
+    <declare-styleable name="ViewFlow">
+        <attr name="sidebuffer" format="integer" />
     </declare-styleable>
 </resources>
