--- a/HuaShanApp/app/src/main/res/layout/activity_messagedetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_messagedetails.xml
@@ -4,11 +4,11 @@
     <data>
         <variable
             name="entity"
-            type="com.karazam.huashanapp.my.message.main.model.databinding.MessageEntity"
+            type="com.karazam.huashanapp.my.message.messagedetails.model.databinding.MessagedetailsEntity"
             ></variable>
         <variable
             name="handler"
-            type="com.karazam.huashanapp.my.message.main.viewmodel.MessageViewModel"
+            type="com.karazam.huashanapp.my.message.messagedetails.viewmodel.MessagedetailsViewModel"
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
@@ -52,7 +52,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
-                android:text="消息中心"
+                android:text="消息详情"
                 android:textColor="#272636"
                 android:textSize="@dimen/title_text_size"/>
 
@@ -88,7 +88,7 @@
                 android:layout_height="match_parent">
 
                 <com.example.utils.custom.RefreshRecyclerView
-                    android:id="@+id/rl_message"
+                    android:id="@+id/rl_messagedetails"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     >
@@ -102,3 +102,4 @@
         </android.support.percent.PercentFrameLayout>
     </android.support.percent.PercentRelativeLayout>
 </layout>
+
