--- a/HuaShanApp/app/src/main/res/layout/layout_project_content_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_project_content_item.xml
@@ -23,6 +23,7 @@
             app:layout_heightPercent="23%">
 
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
